#76	Mac Safari - Question text is not clearly readable. Fixed

--- a/web-app/css/cgrails/default/less/flashcards.less
+++ b/web-app/css/cgrails/default/less/flashcards.less
@@ -96,7 +96,7 @@
 		}
 		
 		
-		.answer-explanation{
+		.answer-explanation {
 			width:95%;
 			margin-left: 20px;
 			.vertical-gradient(#e9e9e9, darken(#e9e9e9, 5%));
@@ -107,7 +107,7 @@
 		
 		h2	{
 		   	font-size: 24px;
-    		font-weight: 100;
+    		font-weight: 200;
 			margin-bottom: 20px;
 			line-height: 1.0;
 			display:table;
